# SDL2X11Emulation

./: Android.mk  CMakeLists.txt  LICENSE  README.md
cmake/: FindPixman.cmake  FindSDL2_ttf.cmake  FindSDL_gpu.cmake
include/X11/: X.h  Xatom.h  Xlib.h  Xproto.h  Xutil.h
src/: atomList.h  atoms.c  atoms.h  colors.c  colors.h  cursor.c  display.c  display.h  drawing.c  drawing.h  error.c  errors.h  events.c  events.h  font.c  font.h  gc.c  gc.h  image.c  input.c  input.h  inputMethod.c  inputMethod.h  keysymlist.h  netAtoms.h  pixmap.c  pointer.c  region.c  resourceTypes.h  screensaver.c  stdColors.h  updateStdColors.py  util.c  util.h  visual.c  visual.h  window.c  window.h  windowDebug.c  windowDebug.h  (+2 more)
